# bitwise-conway

./: CMakeLists.txt  README.md  bitconway.cxx  bitconway_fast.cxx
